# satellites

./: README.md  example.py  pyproject.toml  pytest.ini  run.py
.claude/: settings.local.json
data_layer/: README.md  __init__.py  config.py  pyproject.toml
data_layer/adapters/faiss/: __init__.py  adapter.py
data_layer/core/: __init__.py  events.py  facade.py  health.py
data_layer/data/example_vectors/documents/: index.faiss  state.json
data_layer/data/example_vectors/users/: index.faiss  state.json
data_layer/docs/plans/: 2026-01-11-data-layer-design.md
data_layer/tests/: test_imports.py
data_layer/tests/integration/: test_data_layer.py
docker/: docker-compose.yml
docs/: API_REFERENCE.md
docs/plans/: 2026-01-11-data-layer-implementation.md  2026-01-11-webapp-design.md  2026-01-11-webapp-implementation.md
tests/: conftest.py  test_config.py
tests/adapters/: test_faiss.py  test_faiss_concurrency.py
tests/core/: test_events.py  test_facade.py  test_health.py
tests/integration/: conftest.py  test_data_layer.py  test_webapp.py
tests/webapp/: test_data_crud.py  test_data_routes.py  test_elasticsearch_generator.py  test_migration_executor.py  test_migration_models.py  test_migration_registry.py  test_migration_routes.py  test_postgres_generator.py  test_schema_differ.py  test_schema_models.py  test_schema_registry.py  test_schema_routes.py  test_schema_validator.py
webapp/: __init__.py  app.py  config.py  dependencies.py
webapp/data/: crud.py  router.py  routes.py
webapp/migration/: differ.py  executor.py  models.py  registry.py  routes.py
webapp/migration/generators/: elasticsearch.py  postgres.py
webapp/query/: executor.py  routes.py
webapp/schema/: models.py  registry.py  routes.py  validator.py
webapp/templates/: base.html  index.html
webapp/templates/data/: explorer.html  list.html  record.html
webapp/templates/migration/: list.html  preview.html
webapp/templates/query/: console.html
webapp/templates/schema/: create.html  list.html
