[project]
name = "satellites"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0",
    "asyncpg>=0.29",
    "elasticsearch[async]>=8.11",
    "faiss-cpu>=1.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (Redis, Postgres, Elasticsearch)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
